# hyperbox

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  README_cn.md  conda_env_gpu.yaml  distribute.sh  nb301_epoch120.json  requirements.txt  run.py  run.sh  setup.cfg  setup.py
.github/workflows/: environment.yml  python-package-conda.yml
configs/: config.yaml
configs/callbacks/: default.yaml  wandb.yaml
configs/datamodule/: cifar100_datamodule.yaml  cifar10_datamodule.yaml  fakedata_datamodule.yaml  imagenet_dali_datamodule.yaml  imagenet_datamodule.yaml  mnist_datamodule.yaml
configs/experiment/: example_bnnas.yaml  example_classify.yaml  example_darts_nas.yaml  example_full.yaml  example_nasbench.yaml  example_nb201.yaml  example_nb301.yaml  example_ofa_nas.yaml  example_random_nas.yaml  example_repnas.yaml  example_simple.yaml
configs/hparams_search/: mnist_optuna.yaml
configs/hydra/: default.yaml
configs/logger/: tensorboard.yaml  wandb.yaml
configs/model/: classify_model.yaml  darts_model.yaml  mnist_model.yaml  nas_model.yaml  nasbench_model.yaml  nb301_model.yaml  ofa_model.yaml  random_model.yaml  random_nas_model.yaml  repnas_model.yaml  resnet18.yaml
configs/networks/: darts_network.yaml
configs/trainer/: default.yaml
docs/: release.md  usage.md
docs/source/: conf.py
examples/: DARTS_CIFAR10.ipynb  RandomNAS_MNIST.ipynb
hyperbox/: __init__.py  run.py  train.py
hyperbox/callbacks/: wandb_callbacks.py
hyperbox/configs/: config.yaml  lite.yaml
hyperbox_app/: __init__.py  setup.py
src/: train.py
(+419 files in other folders)
